[package]
name = "cws-rengines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = {default-features = false, version="0.35.2", features=["image"]}
rustc-hash = "1.1.0"

[lib]
name = "cws_rengines"
#crate-type = ["staticlib"]
crate-type = ["cdylib", "staticlib", "lib"]

#[dependencies.sdl2]
#version = "0.35.2"
#features = ["image"]
#default-features = false

[features]
api = []
provide_dbg = []
